--- a/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/index.html
+++ b/SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <img src="images/restaurant logo.webp" alt="restaurant logo" width="170" height="80">
+        <img src="../images/restaurant logo.webp" alt="restaurant logo" width="170" height="80">
         <ol class="inline">
             <li>Home</li>
             <li>About Us</li>
@@ -52,7 +52,7 @@
         </svg>
     </div>
     <div class="center">
-        <img id="bannerpic" src="images/banner.webp" alt="" width="100%">
+        <img id="bannerpic" src="../images/banner.webp" alt="" width="100%">
         <button id="bannerbutton">Order Online</button>
         <svg id="bannericon" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -66,26 +66,26 @@
         </svg>
         <h1>Choose by Category</h1>
         <ul class="pictures">
-            <li><img src="images/sandwich.webp" alt=""><br />
+            <li><img src="../images/sandwich.webp" alt=""><br />
                 <h4>Sandwiches</h4>
             </li>
-            <li><img src="images/famousburger.webp" alt=""><br />
+            <li><img src="../images/famousburger.webp" alt=""><br />
                 <h4>Our Famous Burgers</h4>
             </li>
-            <li><img src="images/deckerburger.webp" alt=""><br />
+            <li><img src="../images/deckerburger.webp" alt=""><br />
                 <h4>Deck Burgers</h4>
             </li>
-            <li><img src="images/steak.webp" alt=""><br />
+            <li><img src="../images/steak.webp" alt=""><br />
                 <h4>Steak</h4>
             </li>
-            <li><img src="images/chinese.webp" alt=""><br />
+            <li><img src="../images/chinese.webp" alt=""><br />
                 <h4>Chinese</h4>
             </li>
         </ul>
     </div>
     <div class="info">
         <div class="infopic">
-            <img src="images/info.webp" alt="" height="500" width="700">
+            <img src="../images/info.webp" alt="" height="500" width="700">
         </div>
         <div class="infopara">
             <h3 class="redheading">SALT'N PEPPER RESTAURANT</h3>
@@ -111,7 +111,7 @@
     <h5>Our Deals</h5>
     <div>
         <ul class="ourdeals">
-            <li><img class="deal1pic" src="images/deal1.webp" alt="" width="350" height="250">
+            <li><img class="deal1pic" src="../images/deal1.webp" alt="" width="350" height="250">
                 <p class="dealheading">Superiors</p>
                 <p class="dealparagraph">Chicken (2 Pcs), Chicken
                     Sandwich Cold (2 Pcs), French Fries, Cole Slaw,
@@ -119,7 +119,7 @@
                 <p class="dealprice">PKR 1,390</p>
                 <button class="dealbutton">Order Now</button>
             </li>
-            <li><img class="deal2pic" src="images/deal2.webp" alt="" width="350" height="250">
+            <li><img class="deal2pic" src="../images/deal2.webp" alt="" width="350" height="250">
                 <p class="dealheading">Pakistani</p>
                 <p class="dealparagraph">B.B.Q Chicken Tikka (1 Piece),
                     Chicken
@@ -127,7 +127,7 @@
                 <p class="dealprice">PKR 1,630</p>
                 <button class="dealbutton">Order Now</button>
             </li>
-            <li><img class="deal3pic" src="images/deal3.webp" alt="" width="350" height="250"><br />
+            <li><img class="deal3pic" src="../images/deal3.webp" alt="" width="350" height="250"><br />
                 <p class="dealheading">Pakistani Deluxe
                 <p>
                 <p class="dealparagraph">Boneless Chicken Handi
@@ -139,19 +139,19 @@
     </div>
     <div class="dealul">
         <ul class="ourdeals">
-            <li><img class="deal1pic" src="images/deal4.webp" alt="" width="350" height="250">
+            <li><img class="deal1pic" src="../images/deal4.webp" alt="" width="350" height="250">
                 <p class="dealheading">VIP</p>
                 <p class="dealparagraph">Chicken Shashlik (1/2 Portion), Chicken Sandwich Cold</p>
                 <p class="dealprice">PKR 1,890</p>
                 <button class="dealbutton">Order Now</button>
             </li>
-            <li><img class="deal2pic" src="images/deal5.webp" alt="" width="350" height="250">
+            <li><img class="deal2pic" src="../images/deal5.webp" alt="" width="350" height="250">
                 <p class="dealheading">DELUXE</p>
                 <p class="dealparagraph">Fried Chicken Breast Sandwich, Chicken Nuggets (4 Pcs),</p>
                 <p class="dealprice">PKR 1,790</p>
                 <button class="dealbutton">Order Now</button>
             </li>
-            <li><img class="deal3pic" src="images/deal3.webp" alt="" width="350" height="250"><br />
+            <li><img class="deal3pic" src="../images/deal3.webp" alt="" width="350" height="250"><br />
                 <p class="dealheading">Pakistani VIP
                 <p>
                 <p class="dealparagraph">Boneless Chicken Handi (Portion), Boneless Chicken Boti</p>
@@ -183,23 +183,23 @@
             </svg>
         </div>
         <div class="deatilpic">
-            <img src="images/detail.webp" alt="" height="600" width="650">
+            <img src="../images/detail.webp" alt="" height="600" width="650">
         </div>
     </div>
     <div class="socialfeed">
         <h5>Social Feed</h5>
         <span class="socialfeed">
-            <img class="feedpic1" src="images/socialfeed1.webp" alt="" height="230" width="245">
-            <img class="feedpic2" src="images/socialfeed2.webp" alt="" height="230" width="245">
-            <img class="feedpic3" src="images/socialfeed3.webp" alt="" height="230" width="245">
-            <img class="feedpic4" src="images/socialfeed4.webp" alt="" height="230" width="245">
-            <img class="feedpic5" src="images/socialfeed5.webp" alt="" height="230" width="245">
+            <img class="feedpic1" src="../images/socialfeed1.webp" alt="" height="230" width="245">
+            <img class="feedpic2" src="../images/socialfeed2.webp" alt="" height="230" width="245">
+            <img class="feedpic3" src="../images/socialfeed3.webp" alt="" height="230" width="245">
+            <img class="feedpic4" src="../images/socialfeed4.webp" alt="" height="230" width="245">
+            <img class="feedpic5" src="../images/socialfeed5.webp" alt="" height="230" width="245">
         </span>
     </div>
     <div id="back" class="footer">
         <div>
             <ul class="footerul">
-                <li><img class="footerpic" src="images/restaurant logo.webp" alt="" height="80" width="170">
+                <li><img class="footerpic" src="../images/restaurant logo.webp" alt="" height="80" width="170">
                     <p class="footerparagraph">The Salt’n Pepper Restaurants are an example of gracious dinning,
                         outstanding
                         service, extraordinary classic
@@ -274,8 +274,8 @@
                             <path
                                 d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z" />
                         </svg></button></li>
-                <li><img src="images/appstore.webp" alt=""></li>
-                <li><img src="images/playstore.webp" alt=""></li>
+                <li><img src="../images/appstore.webp" alt=""></li>
+                <li><img src="../images/playstore.webp" alt=""></li>
             </ul>
         </div>
     </div>
