--- a/SALT,N AND PEPPER HOMEPAGE/index.html
+++ b/SALT,N AND PEPPER HOMEPAGE/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="images/restaurant logo.webp" alt="restaurant logo" width="170" height="80">
+        <ol class="inline">
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Publications</li>
+            <li>Feedback</li>
+            <li>Get a Franchise</li>
+        </ol>
+        <button>Get a Franchise</button>
+        <button class="order">Order Online</button>
+        <i class="fa-solid fa-circle-arrow-right"></i>
 </body>
 </html>
