--- a/SALT,N AND PEPPER HOMEPAGE/index.html
+++ b/SALT,N AND PEPPER HOMEPAGE/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Salt'n pepper | homepage</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
 </head>
@@ -15,10 +15,44 @@
             <li>About Us</li>
             <li>Publications</li>
             <li>Feedback</li>
-            <li>Get a Franchise</li>
         </ol>
         <button>Get a Franchise</button>
         <button class="order">Order Online</button>
         <i class="fa-solid fa-circle-arrow-right"></i>
+    </div>
+    <div class="banner">
+        <img src="images/freedeliverybanner.webp" alt="" >
+        <button class="bannerbutton">ORDER NOW</button>
+    </div>
+    <div class="welcome">
+        <p>Welcome to <span>Salt'n Pepper</span></p>
+           <p>Restaurants! Our Brands</p>
+           <p class="paragraph">Please click our brands below for further information, reservations or to order online!</p>
+    </div>
+    <div>
+        <table class="Category">
+            <tr>
+                <td>
+                    <img src="images/salt and pepper restaurant.webp" alt="">
+                    <button class="now">Order Now</button>
+                </td>
+                <td>
+                    <img src="images/salt and pepper express.webp" alt="">
+                    <button class="now">Order Now</button>
+                </td>
+                <td>
+                    <img src="images/salt and pepper village.webp" alt="">
+                    <button class="now">Order Now</button>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="franchise">
+        <div class="headsection">
+            <p><span>Salt'n Pepper</span></p>
+            <p>Restaurant Franchises</p>
+            <p class="franchiseparagraph">Please click our brands below for further information, reservations or to order online!</p>
+        </div>
+    </div>
 </body>
 </html>
