--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <tr>
             <td>
                 <a href="SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/index.html">
-                    <h1>5: SALT,N PEPPER RESTAURANT</h1>
+                    <h1 class="salt">5: SALT,N PEPPER RESTAURANT</h1>
                 </a>
             </td>
         </tr>
