--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -1,61 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="animate.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/d65207a748.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="animate.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="header">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a href="">
-                    <img class="logoimg animate__animated" width="60" src="images/pepsilogo.png" alt="">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a href="">
+            <img
+              class="logoimg animate__animated"
+              width="60"
+              src="images/pepsilogo.png"
+              alt=""
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 myitems">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#"
+                  >VIEW PRODUCTS
                 </a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">VIEW PRODUCTS </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">WHAT'S NEW</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">NEWSLETTER</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
-                        </li>
-                    </ul>
-                    <button class="pepsi-btn animate__animated">BUY PEPSI PRODUCTS</button>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="container-fluid">
-        <div class="content">
-            <img class="background" src="images/bachgroung.png" alt="">
-            <img class="bottle" src="images/bottles.png" alt="">
-            <img class="unlock" src="images/umlock.svg" alt="">
-            <button class="get-it-btn">GET IT NOW!</button>
-            <p class="content-paragraph">Ends 09/17/23. Age restrictions apply, US/DC/Guam/PR. Limit 1 per person. New &
-                qualified returning
-                subscribers only. $10.99/month after trial until cancelled. Rules & Terms at pressplayonsummer.com
-            </p>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">WHAT'S NEW</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">NEWSLETTER</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT US</a>
+              </li>
+            </ul>
+            <button class="pepsi-btn animate__animated">
+              BUY PEPSI PRODUCTS
+            </button>
+          </div>
         </div>
-        <div class="content-1">
-            
-        </div>
+      </nav>
     </div>
-</body>
-
+    <div class="content">
+      <img class="bottles" src="images/bottles.png" alt="" />
+      <img class="umlock" src="images/umlock.svg" alt="" />
+      <div class="Get-it-now">
+        <button>GET IT NOW!</button>
+        <p>
+          Ends 09/17/23. Age restrictions apply, US/DC/Guam/PR. Limit 1 per
+          person. New & qualified returning subscribers only. $10.99/month after
+          trial until cancelled. Rules & Terms at pressplayonsummer.com.
+        </p>
+      </div>
+    </div>
+    <div class="content2">
+      <img class="pepsi-can" src="images/pepsican.png" alt="" />
+      <img
+        class="new-improved-taste"
+        src="images/new-improved-taste.svg"
+        alt=""
+      />
+      <img class="canzero" src="images/canzero.svg" alt="" />
+      <img
+        class="try-it-to-believe-it"
+        src="images/try-it-to-believe-it.svg"
+        alt=""
+      />
+    </div>
+    <div class="content3">
+      <img class="Nitro_Pepsi_CAN" src="images/Nitro_Pepsi_CAN.png" alt="" />
+      <img class="Nitro_Logo" src="images/Nitro_Logo@3x.png" alt="" />
+      <h2 class="nitro-heading">SMOOTH, CREAMY, DELICIOUS</h2>
+      <button class="LEARN-button">LEARN MORE</button>
+    </div>
+    <div class="content4">
+      <ul class="Thumbnail">
+        <li>
+          <img src="images/Thumbnail_1.jpg" alt="" />
+          <h6>BETTER WITH PEPSI | RIBS</h6>
+        </li>
+        <li class="img2"><img src="images/Thumbnail.jpg" alt="" /></li>
+        <h6>BETTER WITH PEPSI | NACHOS</h6>
+      </ul>
+      <ul class="inline">
+        <li>
+          <img class="content4pic" src="images/content4pic.jpg" alt="" />
+          <img class="tag-line" src="images/tag-line@3x.png" alt="" />
+        </li>
+      </ul>
+    </div>
+    <div class="content5">
+      <img class="mangoheadline" src="images/mangoheadline.png" alt="" />
+      <img class="mangocan" src="images/mangocan.png" alt="" />
+    </div>
+    <div class="content6">
+      <video
+        autoplay
+        loop
+        controls
+        src="images/PepsiWildCherry.Copier.15.mp4"
+      ></video>
+    </div>
+    <div class="content7">
+      <img
+        class="twil-can animate__animated animate__fadeInLeftBig"
+        src="images/twil-can.png"
+        alt=""
+      />
+      <img
+        class="twil-header-dt animate__animated animate__fadeInRightBig"
+        src="images/twil-header-dt.png"
+        alt=""
+      />
+    </div>
+    <div class="content8">
+      <ul class="left-section animate__animated animate__bounceInLeft">
+        <li>
+          <h1>
+            ALL YOUR<br />
+            FAVORITE FLAVORS.<br />
+            ALL RIGHT HERE.
+          </h1>
+        </li>
+        <li>
+          <p>
+            Pepsi. Diet Pepsi. Pepsi Zero Sugar. The gang’s all here. Compare
+            flavors, get nutritional facts and check out ingredients for all our
+            Pepsi products.
+          </p>
+        </li>
+        <li><button class="viewproduct">VIEW PRODUCTS</button></li>
+      </ul>
+      <ul class="right-section animate__animated animate__fadeInRight">
+        <li>
+          <img class="can3" src="images/3can.png" alt="" />
+        </li>
+      </ul>
+    </div>
+    <div class="content9">
+      <h1>STAY ON THE PULSE. FOLLOW PEPSI.</h1>
+      <img class="pic1 animate__animated" src="images/pic1.png" alt="" />
+      <img class="animate__animated" src="images/pic2.png" alt="" />
+      <img class="animate__animated" src="images/pic3.png" alt="" />
+      <img class="animate__animated" src="images/pic4.png" alt="" />
+      <img class="animate__animated" src="images/pic5.png" alt="" />
+    </div>
+    <div class="footer">
+      <ul class="footerimage">
+        <li>
+          <a href="">
+            <img
+              class="footerimg animate__animated"
+              width="60"
+              src="images/footerimg.png"
+              alt=""
+            />
+          </a>
+        </li>
+      </ul>
+      <ul class="footer1">
+        <li>CONTACT US</li>
+        <li>TERMS & CONDITIONS</li>
+        <li>PRIVACY POLICY</li>
+      </ul>
+      <ul class="footer2">
+        <li>COPYRIGHT</li>
+        <li>PRODUCT FACTS</li>
+        <li>STORE LOCATOR</li>
+      </ul>
+      <ul class="footer3">
+        <li>SERVE PEPSI</li>
+        <li>ABOUT OUR ADS</li>
+        <li>CAREERS</li>
+      </ul>
+      <ul class="footer4">
+        <li><button class="footerbtn">subscribe to newsletter</button></li>
+        <li class="icons"><i class="fa-brands fa-twitter"  style="color: #ffffff;"></i>
+          <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+          <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+          <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+          <i class="fa-brands fa-tiktok" style="color: #ffffff;"></i></li>
+      </ul>
+    </div>
+  </body>
 </html>
