NEW ASSIGNMENT ADDED

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     <h1 class="salt">5: SALT,N PEPPER RESTAURANT</h1>
                 </a>
             </td>
+            <td>
+                <a href="PEPSI/index.html">
+                    <h1>6: PEPSI</h1>
+                </a>
+            </td>
         </tr>
         </ol>
 </body>
