--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <center>
-        <h1>MY ASSIGNMENTS</h1>
-    </center>
+        <h1 class="heading">MY ASSIGNMENTS</h1>
     <hr />
     <table class="inline">
         <tr>
