responsive on is way

--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -71,8 +71,11 @@
       </nav>
     </div>
     <div class="content">
-      <img class="bottles" src="images/bottles.png" alt="" />
+      <div class="first">
+        <div id="second">
+      <img class="bottles" src="images/bottles.png" alt="" /></div>
       <img class="umlock" src="images/umlock.svg" alt="" />
+    </div>
       <div class="Get-it-now">
         <button>GET IT NOW!</button>
         <p>
@@ -166,7 +169,7 @@
         </li>
       </ul>
     </div>
-    <div class="content9">
+    <div class="content9 animate__animated animate__bounceInUp">
       <h1>STAY ON THE PULSE. FOLLOW PEPSI.</h1>
       <img class="pic1 animate__animated" src="images/pic1.png" alt="" />
       <img class="animate__animated" src="images/pic2.png" alt="" />
