--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -72,9 +72,9 @@
     </div>
     <div class="content">
       <div class="first">
-        <div id="second">
-      <img class="bottles" src="images/bottles.png" alt="" /></div>
+      <img class="bottles" src="images/bottles.png" alt="" />
       <img class="umlock" src="images/umlock.svg" alt="" />
+    </div>
     </div>
       <div class="Get-it-now">
         <button>GET IT NOW!</button>
