--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -72,16 +72,16 @@
     </div>
     <div class="content">
       <div class="first">
-      <img class="bottles" src="images/bottles.png" alt="" />
-      <img class="umlock" src="images/umlock.svg" alt="" />
-    </div>
-      <div class="Get-it-now">
-        <button>GET IT NOW!</button>
-        <p>
-          Ends 09/17/23. Age restrictions apply, US/DC/Guam/PR. Limit 1 per
-          person. New & qualified returning subscribers only. $10.99/month after
-          trial until cancelled. Rules & Terms at pressplayonsummer.com.
-        </p>
+        <img class="umlock" src="images/umlock.svg" alt="" />
+        <div class="Get-it-now">
+          <button>GET IT NOW!</button>
+          <p>
+            Ends 09/17/23. Age restrictions apply, US/DC/Guam/PR. Limit 1 per
+            person. New & qualified returning subscribers only. $10.99/month after
+            trial until cancelled. Rules & Terms at pressplayonsummer.com.
+          </p>
+        </div>
+          <img class="bottles" src="images/bottles.png" alt="" />
       </div>
     </div>
     <div class="content2">
@@ -91,12 +91,13 @@
         src="images/new-improved-taste.svg"
         alt=""
       />
+      <div class="reverse">
       <img class="canzero" src="images/canzero.svg" alt="" />
       <img
         class="try-it-to-believe-it"
         src="images/try-it-to-believe-it.svg"
         alt=""
-      />
+      /></div>
     </div>
     <div class="content3">
       <img class="Nitro_Pepsi_CAN" src="images/Nitro_Pepsi_CAN.png" alt="" />
@@ -170,7 +171,7 @@
     </div>
     <div class="content9 animate__animated animate__bounceInUp">
       <h1>STAY ON THE PULSE. FOLLOW PEPSI.</h1>
-      <img class="pic1 animate__animated" src="images/pic1.png" alt="" />
+      <img class="animate__animated" src="images/pic1.png" alt="" />
       <img class="animate__animated" src="images/pic2.png" alt="" />
       <img class="animate__animated" src="images/pic3.png" alt="" />
       <img class="animate__animated" src="images/pic4.png" alt="" />
