--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -101,9 +101,11 @@
     </div>
     <div class="content3">
       <img class="Nitro_Pepsi_CAN" src="images/Nitro_Pepsi_CAN.png" alt="" />
+      <div class="content3reverse">
       <img class="Nitro_Logo" src="images/Nitro_Logo@3x.png" alt="" />
       <h2 class="nitro-heading">SMOOTH, CREAMY, DELICIOUS</h2>
       <button class="LEARN-button">LEARN MORE</button>
+      </div>
     </div>
     <div class="content4">
       <ul class="Thumbnail">
