--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -109,10 +109,9 @@
     </div>
     <div class="content4">
       <ul class="Thumbnail">
-        <li>
-          <img src="images/Thumbnail_1.jpg" alt="" />
+        <li class="img1">
+          <img src="images/Thumbnail_1.jpg" alt="" /></li>
           <h6>BETTER WITH PEPSI | RIBS</h6>
-        </li>
         <li class="img2"><img src="images/Thumbnail.jpg" alt="" /></li>
         <h6>BETTER WITH PEPSI | NACHOS</h6>
       </ul>
