--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -125,6 +125,12 @@
     <div class="content5">
       <img class="mangoheadline" src="images/mangoheadline.png" alt="" />
       <img class="mangocan" src="images/mangocan.png" alt="" />
+      <div class="mbl">
+        <img class="content5mango1-mobile" src="images/content5mango1-mobile.png" alt="">
+        <img class="content5mblbg" src="images/content5mblbg.png" alt="">
+        <img class="content5mango-mobile" src="images/content5mango-mobile.png" alt="">
+        <img class="content5can-mobile" src="images/content5can-mobile.png" alt="">
+      </div>
     </div>
     <div class="content6">
       <video
@@ -145,6 +151,9 @@
         src="images/twil-header-dt.png"
         alt=""
       />
+      <div class="content7mbl">
+        <img class="thatwhatilikembl" src="images/thatwhatilikembl.png" alt="">
+      </div>
     </div>
     <div class="content8">
       <ul class="left-section animate__animated animate__bounceInLeft">
