--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -185,7 +185,7 @@
       <img class="animate__animated" src="images/pic2.png" alt="" />
       <img class="animate__animated" src="images/pic3.png" alt="" />
       <img class="animate__animated" src="images/pic4.png" alt="" />
-      <img class="animate__animated" src="images/pic5.png" alt="" />
+      <img class="animate__animated pic5" src="images/pic5.png" alt="" />
     </div>
     <div class="footer">
       <ul class="footerimage">
