--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -215,6 +215,20 @@
         <li>ABOUT OUR ADS</li>
         <li>CAREERS</li>
       </ul>
+      <ul class="footermbl">
+        <li>CONTACT US</li>
+        <li>TERMS & CONDITIONS</li>
+        <li>PRIVACY POLICY</li>
+        <li>COPYRIGHT</li>
+        <li>PRODUCT FACTS</li>
+        <li>STORE LOCATOR</li>
+        <li>SERVE PEPSI</li>
+        <li>ABOUT OUR ADS</li>
+        <li>CAREERS</li>
+      </ul>
+      <div class="hr">
+        
+      </div>
       <ul class="footer4">
         <li><button class="footerbtn">subscribe to newsletter</button></li>
         <li class="icons"><i class="fa-brands fa-twitter"  style="color: #ffffff;"></i>
