--- a/PEPSI/index.html
+++ b/PEPSI/index.html
@@ -35,6 +35,7 @@
               alt=""
             />
           </a>
+          <h4 class="pepsi">PEPSI</h4>
           <button
             class="navbar-toggler"
             type="button"
