--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     <h1>6: PEPSI</h1>
                 </a>
             </td>
+            <td>
+                <a href="Tere website/index.html">
+                    <h1>7: TERE</h1>
+                </a>
+            </td>
         </tr>
         </ol>
 </body>
