add java on my portfolio

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                     <h1>7: TERE</h1>
                 </a>
             </td>
+            <td>
+                <a href="JavaScript/index.html">
+                    <h1>8: JavaScript</h1>
+                </a>
+            </td>
         </tr>
         </ol>
 </body>
