--- a/PRACTICE/index.html
+++ b/PRACTICE/index.html
@@ -1,29 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="box">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos qui
-        tenetur dicta cumque quo officia pariatur quae provident dolorum nisi,
-        atque unde, sed fugiat cupiditate et culpa rem eos reprehenderit.
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+
+    <div class="main-grid">
+      <main>
+        <p class="eyebrows">developer</p>
+        <h1 class="page-title">Muhammad Aqib</h1>
+        <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt est tempora mollitia, eligendi,
+          ipsum voluptate blanditiis</p>
+        <div class="job-experience">
+          <div class="job">
+            <p class="year">2021</p>
+            <div class="job-info">
+              <h2 class="role">Sales Engineer</h2>
+              <span class="company">inves llc</span>
+            </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam provident consequuntur similique</p>
+          </div>
+          <div class="job">
+            <p class="year">2021</p>
+            <div class="job-info">
+              <h2 class="role">Sales Engineer</h2>
+              <span class="company">inves llc</span>
+            </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat esse deleniti sint.!</p>
+          </div>
+          <div class="job">
+            <p class="year">2019</p>
+            <div class="job-info">
+              <h2 class="role">Sales Engineer</h2>
+              <span class="company">inves llc</span>
+            </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet porro</p>
+          </div>
+        </div>
+      </main>
+      <aside>
+        <ul class="icon-list">
+          <li>
+            <p class="invisible">html</p><i class="fa-brands fa-html5" style="color: #ffffff;"></i>
+            <p class="list">HTML</p>
+          </li>
+          <li>
+            <p class="invisible">Css</p><i class="fa-brands fa-css3" style="color: #ffffff;"></i>
+            <p class="list">CSS</p>
+          </li>
+          <li>
+            <p class="invisible">javascript</p><i class="fa-brands fa-js" style="color: #ffffff;"></i>
+            <P class="list">JavaScript</P>
+          </li>
+        </ul>
+      </aside>
     </div>
-  </body>
+
+</body>
+
 </html>
