added my portfolio

--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -38,7 +38,7 @@
       </nav>
     </div>
     <div class="main">
-        <div>
+        <div class="intro">
           <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
           <p class="main-paragraph">I am enroll in SMIT for WEB AND APP DEVELOPMENT for the kind supervison of Sir Ghous Ahmed</p>
           <button class="latest-assignment">Latest Assignment</button>
