--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -46,6 +47,18 @@
         <div>
           <img class="main-pic" src="images/mypic.png" alt="">
         </div>
+        <div class="main-contact">
+          <div class="line">
+      
+          </div>
+          <div>
+            <ul class="contact">
+              <li><i class="fa-brands fa-facebook" style="color: #f9f9f9;"></i></li>
+              <li><i class="fa-brands fa-instagram" style="color: #f9f9f9;"></i></li>
+              <li><i class="fa-brands fa-whatsapp" style="color: #f9f9f9;"></i></li>
+            </ul>
+          </div>
+          </div>
     </div>
 </body>
 
