--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -41,7 +41,7 @@
     <div class="main">
         <div class="intro">
           <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
-          <p class="main-paragraph">I am enroll in SMIT for WEB AND APP DEVELOPMENT for the kind supervison of Sir Ghous Ahmed</p>
+          <p class="main-paragraph">WEB AND APP DEVELOPER</p>
           <button class="latest-assignment">Latest Assignment</button>
         </div>
         <div>
