2 sections is complete of my portfolio

--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -2,64 +2,81 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="header">
+  <div class="header">
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><h1 class="logo">PortFolio<span class="dot">.</span></h1></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">My Assignments</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <h1 class="logo">PortFolio<span class="dot">.</span></h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My Assignments</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+  </div>
+  <div class="main">
+    <div class="intro">
+      <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
+      <p class="main-paragraph">WEB AND APP DEVELOPER</p>
+      <button class="latest-assignment">Latest Assignment</button>
     </div>
-    <div class="main">
-        <div class="intro">
-          <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
-          <p class="main-paragraph">WEB AND APP DEVELOPER</p>
-          <button class="latest-assignment">Latest Assignment</button>
-        </div>
-        <div>
-          <img class="main-pic" src="images/mypic.png" alt="">
-        </div>
-        <div class="main-contact">
-          <div class="line">
-      
-          </div>
-          <div>
-            <ul class="contact">
-              <li><i class="fa-brands fa-facebook" style="color: #f9f9f9;"></i></li>
-              <li><i class="fa-brands fa-instagram" style="color: #f9f9f9;"></i></li>
-              <li><i class="fa-brands fa-whatsapp" style="color: #f9f9f9;"></i></li>
-            </ul>
-          </div>
-          </div>
+    <div>
+      <img class="main-pic" src="images/mypic.png" alt="">
     </div>
+    <div class="main-contact">
+      <div class="line">
+
+      </div>
+      <div>
+        <ul class="contact">
+          <li><i class="fa-brands fa-facebook" style="color: #f9f9f9;"></i></li>
+          <li><i class="fa-brands fa-instagram" style="color: #f9f9f9;"></i></li>
+          <li><i class="fa-brands fa-whatsapp" style="color: #f9f9f9;"></i></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="about-me">
+    <div class="about-pic"><img src="images/aboutme-01.jpeg" alt=""></div>
+    <div class="about-section">
+      <h3 class="about-heading">About Me</h3>
+      <p class="about-paragraph">Asalam Walikum, Iam Muhammad Aqib live in Karachi,Pakistan Was born in Pakhtoon Family
+        on 10<sup>th</sup> of October 1999 i done my Matric from Brookly Secondary School then i go for Intermediate
+        from Govt Islamia Art and Commerce College Karchi but iam not satisfy on my result i did Intermediate again
+        and now iam enroll in SMIT for WEB AND APP DEVELOPMENT for the kind supervision of Sir Ghous Ahmed.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laboriosam dolores quidem temporibus, aut
+        accusantium porro voluptates laborum molestiae eveniet perspiciatis quibusdam magni unde doloremque eligendi
+        quaerat distinctio! Nemo, ipsam?</p>
+      <button class="CV">Download CV</button>
+    </div>
+  </div>
 </body>
 
 </html>
