first section backgroung position
line height 73vh to 80vh
background size cover

--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -77,6 +77,14 @@
       <button class="CV">Download CV</button>
     </div>
   </div>
+  <div class="Assignment">
+    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+  </div>
 </body>
 
 </html>
