my assignment section

--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -77,13 +77,47 @@
       <button class="CV">Download CV</button>
     </div>
   </div>
-  <div class="Assignment">
-    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
-    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
-    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
-    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
-    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
-    <button class="check"><img src="images/mypic.png" alt=""> Download CV</button>
+  <div class="my-assignments">
+    <h3 class="my-assignments-heading">My Assignments</h3>
+    <div class="Assignment">
+      <button class="Assignment-1"><img class="Assignment-pic1" src="images/javablack.png" alt=""><span class="yellow-assignment">JavaScript Assignment
+        2
+        <br /> Chapter 6 to 13 <br>11-Aug-2023</span></button>
+      <button class="Assignment-2"><img class="Assignment-pic1" src="images/javablack.png" alt="">JavaScript Assignment
+        1
+        <br /> Chapter 1 to 5 <br> 04-Aug-2023</button>
+      <button class="Assignment-3"><img class="Assignment-pic3" src="images/Group 3702logo.png" alt="">CSS
+        Assignment 4
+        <br /> FIGMA TERE WEBSITE<br>02-Aug-2023</button>
+      <button class="Assignment-4"><img class="Assignment-pic4" src="images/Pepsi.png" alt="">CSS
+        Assignment 3
+        <br /> PEPSI website <br>14-July-2023</button>
+      <button class="Assignment-5 "><img class="Assignment-pic5" src="images/salt and pepper restaurant.webp" alt="">css
+        Assignment 2
+        <br /> salt n pepper website <br>08-july-2023</button>
+      <button class="Assignment-6"><h1 class="Assignment-6-heading">Poem</h1>css
+        Assignment 1
+        <br /> Poem <br>07-july-2023</button>
+      <button class="Assignment-7"><h1 class="Assignment-7-heading">Application Form</h1>html
+        Assignment 5
+        <br /> application form <br>16-june-2023</button>
+      <button class="Assignment-8"><img class="Assignment-pic8" src="images/chess.png" alt="">html
+        Assignment 4
+        <br />Chess game<br>14-june-2023</button>
+        <button class="Assignment-9"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"  background="transparent"  speed="1"  style="width: 200px; height: 110px;" 
+           loop  autoplay></lottie-player>html
+          Assignment 3
+          <br />restaurant website<br>12-june-2023</button>
+          <button class="Assignment-10"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"  background="transparent"  speed="1"  style="width: 200px; height: 110px;" 
+             loop  autoplay></lottie-player>html
+            Assignment 2
+            <br />Restaurant menu<br>08-june-2023</button>
+            <button class="Assignment-11"><h1 class="Assignment-11-heading">Basic of html</h1>html
+              Assignment 1
+              <br />Basic of html<br>06-june-2023</button>
+    </div>
   </div>
 </body>
 
