--- a/MY PORTFOLIO/index.html
+++ b/MY PORTFOLIO/index.html
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link active" aria-current="page" href="#about-me">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Assignments</a>
+              <a class="nav-link" href="#my-assignments">My Assignments</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -56,14 +56,14 @@
       </div>
       <div>
         <ul class="contact">
-          <li><i class="fa-brands fa-facebook" style="color: #f9f9f9;"></i></li>
-          <li><i class="fa-brands fa-instagram" style="color: #f9f9f9;"></i></li>
+          <li><a href="https://www.facebook.com/aqib984" target="_blank"><i class="fa-brands fa-facebook" style="color: #f9f9f9;"></i></a></li>
+          <li><a href="https://www.instagram.com/aqi984/" target="_blank"><i class="fa-brands fa-instagram" style="color: #f9f9f9;"></i></a></li>
           <li><i class="fa-brands fa-whatsapp" style="color: #f9f9f9;"></i></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="about-me">
+  <div id="about-me">
     <div class="about-pic"><img src="images/aboutme-01.jpeg" alt=""></div>
     <div class="about-section">
       <h3 class="about-heading">About Me</h3>
@@ -77,7 +77,7 @@
       <button class="CV">Download CV</button>
     </div>
   </div>
-  <div class="my-assignments">
+  <div id="my-assignments">
     <h3 class="my-assignments-heading">My Assignments</h3>
     <div class="Assignment">
       <button class="Assignment-1"><img class="Assignment-pic1" src="images/javablack.png" alt=""><span class="yellow-assignment">JavaScript Assignment
