--- a/index.html
+++ b/index.html
@@ -2,125 +2,169 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="header">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <h1 class="logo">PortFolio<span class="dot">.</span></h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#about-me">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#my-assignments">My Assignments</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+    <div class="header">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <h1 class="logo">PortFolio<span class="dot">.</span></h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#about-me">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#my-assignments">My Assignments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="main">
+        <div class="intro">
+            <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
+            <p class="main-paragraph">WEB AND APP DEVELOPER</p>
+            <button class="latest-assignment">Latest Assignment</button>
         </div>
-      </div>
-    </nav>
-  </div>
-  <div class="main">
-    <div class="intro">
-      <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
-      <p class="main-paragraph">WEB AND APP DEVELOPER</p>
-      <button class="latest-assignment">Latest Assignment</button>
-    </div>
-    <div>
-      <img class="main-pic" src="images/mypic.png" alt="">
-    </div>
-    <div class="main-contact">
-      <div class="line">
+        <div>
+            <img class="main-pic" src="images/mypic.png" alt="">
+        </div>
+        <div class="main-contact">
+            <div class="line">
 
-      </div>
-      <div>
-        <ul class="contact">
-          <li><a href="https://www.facebook.com/aqib984" target="_blank"><i class="fa-brands fa-facebook" style="color: #f9f9f9;"></i></a></li>
-          <li><a href="https://www.instagram.com/aqi984/" target="_blank"><i class="fa-brands fa-instagram" style="color: #f9f9f9;"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/aqib984/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #f9f9f9;"></i></a></li>
-          <li><a href="https://twitter.com/Aqi984" target="_blank"><i class="fa-brands fa-twitter" style="color: #f9f9f9;"></i></a></li>
-          <li><a href="https://github.com/maqib984" target="_blank"><i class="fa-brands fa-github" style="color: #f9f9f9;"></i></a></li>
-        </ul>
-      </div>
+            </div>
+            <div>
+                <ul class="contact">
+                    <li><a href="https://www.facebook.com/aqib984" target="_blank"><i class="fa-brands fa-facebook"
+                                style="color: #f9f9f9;"></i></a></li>
+                    <li><a href="https://www.instagram.com/aqi984/" target="_blank"><i class="fa-brands fa-instagram"
+                                style="color: #f9f9f9;"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/aqib984/" target="_blank"><i class="fa-brands fa-linkedin"
+                                style="color: #f9f9f9;"></i></a></li>
+                    <li><a href="https://twitter.com/Aqi984" target="_blank"><i class="fa-brands fa-twitter"
+                                style="color: #f9f9f9;"></i></a></li>
+                    <li><a href="https://github.com/maqib984" target="_blank"><i class="fa-brands fa-github"
+                                style="color: #f9f9f9;"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-  <div id="about-me">
-    <div class="about-pic"><img src="images/aboutme-01.jpeg" alt=""></div>
-    <div class="about-section">
-      <h3 class="about-heading">About Me</h3>
-      <p class="about-paragraph">Asalam Walikum, Iam Muhammad Aqib live in Karachi,Pakistan Was born in Pakhtoon Family
-        on 10<sup>th</sup> of October 1999 i done my Matric from Brookly Secondary School then i go for Intermediate
-        from Govt Islamia Art and Commerce College Karchi but iam not satisfy on my result i did Intermediate again
-        and now iam enroll in SMIT for WEB AND APP DEVELOPMENT for the kind supervision of Sir Ghous Ahmed.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laboriosam dolores quidem temporibus, aut
-        accusantium porro voluptates laborum molestiae eveniet perspiciatis quibusdam magni unde doloremque eligendi
-        quaerat distinctio! Nemo, ipsam?</p>
-      <button class="CV">Download CV</button>
+    <div id="about-me">
+        <div class="about-pic"><img src="images/aboutme-01.jpeg" alt=""></div>
+        <div class="about-section">
+            <h3 class="about-heading">About Me</h3>
+            <p class="about-paragraph">Asalam Walikum, Iam Muhammad Aqib live in Karachi,Pakistan Was born in Pakhtoon
+                Family
+                on 10<sup>th</sup> of October 1999 i done my Matric from Brookly Secondary School then i go for
+                Intermediate
+                from Govt Islamia Art and Commerce College Karchi but iam not satisfy on my result i did Intermediate
+                again
+                and now iam enroll in SMIT for WEB AND APP DEVELOPMENT for the kind supervision of Sir Ghous Ahmed.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laboriosam dolores quidem
+                temporibus, aut
+                accusantium porro voluptates laborum molestiae eveniet perspiciatis quibusdam magni unde doloremque
+                eligendi
+                quaerat distinctio! Nemo, ipsam?</p>
+            <button class="CV">Download CV</button>
+        </div>
     </div>
-  </div>
-  <div id="my-assignments">
-    <h3 class="my-assignments-heading">My Assignments</h3>
-    <div class="Assignment">
-      <button class="Assignment-1"><img class="Assignment-pic1" src="images/javablack.png" alt=""><span class="yellow-assignment">JavaScript Assignment
-        2
-        <br /> Chapter 6 to 13 <br>11-Aug-2023</span></button>
-      <button class="Assignment-2"><img class="Assignment-pic1" src="images/javablack.png" alt="">JavaScript Assignment
-        1
-        <br /> Chapter 1 to 5 <br> 04-Aug-2023</button>
-      <button class="Assignment-3"><img class="Assignment-pic3" src="images/Group 3702logo.png" alt="">CSS
-        Assignment 4
-        <br /> FIGMA TERE WEBSITE<br>02-Aug-2023</button>
-      <button class="Assignment-4"><img class="Assignment-pic4" src="images/Pepsi.png" alt="">CSS
-        Assignment 3
-        <br /> PEPSI website <br>14-July-2023</button>
-      <button class="Assignment-5 "><img class="Assignment-pic5" src="images/salt and pepper restaurant.webp" alt="">css
-        Assignment 2
-        <br /> salt n pepper website <br>08-july-2023</button>
-      <button class="Assignment-6"><h1 class="Assignment-6-heading">Poem</h1>css
-        Assignment 1
-        <br /> Poem <br>07-july-2023</button>
-      <button class="Assignment-7"><h1 class="Assignment-7-heading">Application Form</h1>html
-        Assignment 5
-        <br /> application form <br>16-june-2023</button>
-      <button class="Assignment-8"><img class="Assignment-pic8" src="images/chess.png" alt="">html
-        Assignment 4
-        <br />Chess game<br>14-june-2023</button>
-        <button class="Assignment-9"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"  background="transparent"  speed="1"  style="width: 200px; height: 110px;" 
-           loop  autoplay></lottie-player>html
-          Assignment 3
-          <br />restaurant website<br>12-june-2023</button>
-          <button class="Assignment-10"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"  background="transparent"  speed="1"  style="width: 200px; height: 110px;" 
-             loop  autoplay></lottie-player>html
-            Assignment 2
-            <br />Restaurant menu<br>08-june-2023</button>
-            <button class="Assignment-11"><h1 class="Assignment-11-heading">Basic of html</h1>html
-              Assignment 1
-              <br />Basic of html<br>06-june-2023</button>
+    <div id="my-assignments">
+        <h3 class="my-assignments-heading">My Assignments</h3>
+        <div class="Assignment">
+            <button class="Assignment-1"><a href="JavaScript/index.html"><img class="Assignment-pic1"
+                        src="images/javablack.png" alt=""></a><a href="JavaScript/index.html"><span
+                        class="yellow-assignment">JavaScript Assignment
+                        2
+                        <br /> Chapter 6 to 13 <br>11-Aug-2023</span></a></button>
+            <button class="Assignment-2"><a href="JavaScript/index.html"><img class="Assignment-pic1"
+                        src="images/javablack.png" alt=""></a><a href="JavaScript/index.html">
+                    JavaScript Assignment
+                    1
+                    <br /> Chapter 1 to 5 <br> 04-Aug-2023</a></button>
+            <button class="Assignment-3"><a href="Tere website/index.html"><img class="Assignment-pic3"
+                        src="images/Group 3702logo.png" alt=""></a><a href="Tere website/index.html">
+                    css Assignment 4
+                    <br /> FIGMA TERE WEBSITE<br>02-Aug-2023</a></button>
+            <button class="Assignment-4"><a href="PEPSI/index.html">
+                    <img class="Assignment-pic4" src="images/Pepsi.png" alt=""></a>
+                <a href="PEPSI/index.html">Css Assignment 3
+                    <br /> PEPSI website <br>14-July-2023</a></button>
+            <button class="Assignment-5 "><a href="SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/index.html">
+                    <img class="Assignment-pic5" src="images/salt and pepper restaurant.webp" alt=""></a>
+                <a href="SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/index.html">css Assignment 2
+                    <br /> salt n pepper website <br>08-july-2023</a></button>
+            <button class="Assignment-6">
+                <a href="POEM/index.html">
+                    <h1 class="Assignment-6-heading">Poem</h1>
+                </a>
+                <a href="POEM/index.html">css Assignment 1<br /> Poem <br>07-july-2023</a></button>
+            <button class="Assignment-7">
+                <a href="Form/index.html">
+                    <h1 class="Assignment-7-heading">Application Form</h1>
+                </a>
+                <a href="Form/index.html">html Assignment 5
+                    <br /> application form <br>16-june-2023
+                </a></button>
+            <button class="Assignment-8">
+                <a href="CHESS/index.html">
+                    <img class="Assignment-pic8" src="images/chess.png" alt="">
+                </a>
+                <a href="CHESS/index.html">html Assignment 4
+                    <br />Chess game<br>14-june-2023
+                </a>
+            </button>
+            <button class="Assignment-9">
+                <a href="RESTURANT/index.html">
+                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"
+                        background="transparent" speed="1" style="width: 200px; height: 110px;" loop
+                        autoplay></lottie-player>
+                </a>
+                <a href="RESTURANT/index.html">html Assignment 3<br />restaurant website<br>12-june-2023
+                </a></button>
+            <button class="Assignment-10">
+                <a href="RESTURANT/index.html">
+                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"
+                        background="transparent" speed="1" style="width: 200px; height: 110px;" loop
+                        autoplay></lottie-player>
+                </a>
+                <a href="RESTURANT/index.html">
+                    html Assignment 2<br />Restaurant menu<br>08-june-2023
+                </a>
+            </button>
+            <button class="Assignment-11">
+                <a href="index.html">
+                    <h1 class="Assignment-11-heading">Basic of html</h1>
+                </a>
+                <a href="index.html">
+                    html Assignment 1<br />Basic of html<br>06-june-2023
+                </a>
+            </button>
+        </div>
     </div>
-  </div>
 </body>
 
 </html>
