--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d65207a748.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,7 +19,7 @@
     <div class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="">
                     <h1 class="logo">PortFolio<span class="dot">.</span></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -46,7 +47,7 @@
         <div class="intro">
             <h1 class="main-heading">I'M <span class="yellow">Muhammad Aqib</span></h1>
             <p class="main-paragraph">WEB AND APP DEVELOPER</p>
-            <button class="latest-assignment">Latest Assignment</button>
+            <button class="latest-assignment"><a href="JavaScript/index.html">Latest Assignment</a></button>
         </div>
         <div>
             <img class="main-pic" src="images/mypic.png" alt="">
@@ -93,13 +94,15 @@
     <div id="my-assignments">
         <h3 class="my-assignments-heading">My Assignments</h3>
         <div class="Assignment">
-            <button class="Assignment-1"><a href="JavaScript/index.html"><img class="Assignment-pic1"
-                        src="images/javablack.png" alt=""></a><a href="JavaScript/index.html"><span
-                        class="yellow-assignment">JavaScript Assignment
-                        2
-                        <br /> Chapter 6 to 13 <br>11-Aug-2023</span></a></button>
+            <button class="Assignment-1">
+                <a href="JavaScript/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="JavaScript/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 2<br /> Chapter 6 to 13 <br>11-Aug-2023</span>
+                </a>
+            </button>
             <button class="Assignment-2"><a href="JavaScript/index.html"><img class="Assignment-pic1"
-                        src="images/javablack.png" alt=""></a><a href="JavaScript/index.html">
+                        src="images/javablackandmatch.png" alt=""></a><a href="JavaScript/index.html">
                     JavaScript Assignment
                     1
                     <br /> Chapter 1 to 5 <br> 04-Aug-2023</a></button>
@@ -163,6 +166,36 @@
                     html Assignment 1<br />Basic of html<br>06-june-2023
                 </a>
             </button>
+        </div>
+    </div>
+    <div class="skills-section">
+        <h1 class="skill-heading">Skills</h1>
+        <div class="skills">
+            <div class="skill-1 animate__animated">
+                <img src="images/javablackandmatch.png" alt="">
+                <h5>JavaScript</h5>
+            </div>
+            <div class="skill-2">
+                <img src="images/csslogo.png" alt="">
+                <h5>CSS3</h5>
+            </div>
+            <div class="skill-3">
+                <img src="images/HTML5.png" alt="">
+                <h5>HTML5</h5>
+            </div>
+        </div>
+    </div>
+    <div class="education">
+        <h1 class="education-heading">Education</h1>
+        <div class="first-education">
+            <h5 class="year">2023</h5>
+            <div class="degree">
+                <h1 class="degree-heading">web and app DEVELOPMENT</h1>
+                <h4 class="degree-from">saylani mass it</h4>
+                <p class="degree-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex molestiae dolorem magnam voluptas
+                    adipisci quasi, quae corporis odit dignissimos. Ad dolor sed eaque alias incidunt ex laboriosam
+                    sequi consectetur recusandae!</p>
+            </div>
         </div>
     </div>
 </body>
