--- a/index.html
+++ b/index.html
@@ -189,14 +189,33 @@
         <h1 class="education-heading">Education</h1>
         <div class="first-education">
             <h5 class="year">2023</h5>
+            <span class="education-line"></span>
             <div class="degree">
-                <h1 class="degree-heading">web and app DEVELOPMENT</h1>
-                <h4 class="degree-from">saylani mass it</h4>
-                <p class="degree-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex molestiae dolorem magnam voluptas
-                    adipisci quasi, quae corporis odit dignissimos. Ad dolor sed eaque alias incidunt ex laboriosam
-                    sequi consectetur recusandae!</p>
+                <h1 class="degree-heading">Web and App Development</h1>
+                <h4 class="degree-from">Saylani Mass it Training</h4>
+                <p class="degree-about">Currently iam enroll in SMIT in a kind supervision of Sir Ghous Ahmed 
+                    i completed my HTML5 and CSS3 now we are on JavaScript
+                </p>
             </div>
         </div>
+        <div class="second-education">
+            <h5 class="year">2022</h5>
+            <span class="education-line"></span>
+            <div class="degree-2">
+                <h1 class="degree-heading-2">Intermediate</h1>
+                <h4 class="degree-from">Ziauddin Examination Board</h4>
+                <p class="degree-about">After Taking long break due to Covid I completed my Intermediate from ZUEB in 2022 i got 73% </p>
+            </div>
+        </div>
+            <div class="second-education">
+                <h5 class="year">2017</h5>
+                <span class="education-line"></span>
+            <div class="degree-2">
+                <h1 class="degree-heading-3">Matric</h1>
+                <h4 class="degree-from">Brooklyn Secondary School</h4>
+                <p class="degree-about">I completed my Matric from the year of 2017</p>
+            </div>
+    </div>
     </div>
 </body>
 
