--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My PortFolio.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -29,6 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="">Home</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#about-me">About</a>
                         </li>
@@ -76,24 +79,32 @@
         <div class="about-pic"><img src="images/aboutme-01.jpeg" alt=""></div>
         <div class="about-section">
             <h3 class="about-heading">About Me</h3>
-            <p class="about-paragraph">Asalam Walikum, Iam Muhammad Aqib live in Karachi,Pakistan Was born in Pakhtoon
+            <p class="about-paragraph">Assalam Walikum, I am Muhammad Aqib live in Karachi,Pakistan Was born in Pakhtoon
                 Family
-                on 10<sup>th</sup> of October 1999 i done my Matric from Brookly Secondary School then i go for
-                Intermediate
-                from Govt Islamia Art and Commerce College Karchi but iam not satisfy on my result i did Intermediate
-                again
-                and now iam enroll in SMIT for WEB AND APP DEVELOPMENT for the kind supervision of Sir Ghous Ahmed.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laboriosam dolores quidem
-                temporibus, aut
-                accusantium porro voluptates laborum molestiae eveniet perspiciatis quibusdam magni unde doloremque
-                eligendi
-                quaerat distinctio! Nemo, ipsam?</p>
+                on 10<sup>th</sup> of October 1999 i done my Matric from Brookly Secondary School in 2017 then After taking
+                long break due to covid-19 i done my Intermediate from ZUEB in 2022 i did job at The C.A.S School since 2019
+            as a floor supervisor and store keeper now i'm enroll in SMIT for WEB AND APP DEVELOPMENT in a Kind supervision
+            of Sir Ghous Ahmed we completed HTML5 and CSS3 Now we are on JavaScript</p>
             <button class="CV">Download CV</button>
         </div>
     </div>
     <div id="my-assignments">
         <h3 class="my-assignments-heading">My Assignments</h3>
         <div class="Assignment">
+            <button class="Assignment-1">
+                <a href="index.html"><h1 class="logo-1">PortFolio<span class="dot">.</span></h1>
+                </a>
+                <a href="index.html">
+                    <span class="yellow-assignment">CSS Assignment 5<br /> own website<br>18-Aug-2023</span>
+                </a>
+            </button>
+            <button class="Assignment-2">
+                <a href="JavaScript/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="JavaScript/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 3<br /> Chapter 14 to 16 <br>18-Aug-2023</span>
+                </a>
+            </button>
             <button class="Assignment-1">
                 <a href="JavaScript/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
                 </a>
@@ -173,7 +184,7 @@
         <div class="skills">
             <div class="skill-1 animate__animated">
                 <img src="images/javablackandmatch.png" alt="">
-                <h5>JavaScript</h5>
+                <h5>JavaScript<br /> On Process</h5>
             </div>
             <div class="skill-2">
                 <img src="images/csslogo.png" alt="">
@@ -188,7 +199,7 @@
     <div class="education">
         <h1 class="education-heading">Education</h1>
         <div class="first-education">
-            <h5 class="year">2023</h5>
+            <h5 class="year">On Process</h5>
             <span class="education-line"></span>
             <div class="degree">
                 <h1 class="degree-heading">Web and App Development</h1>
@@ -199,16 +210,16 @@
             </div>
         </div>
         <div class="second-education">
-            <h5 class="year">2022</h5>
+            <h5 class="year-2">2022</h5>
             <span class="education-line"></span>
             <div class="degree-2">
                 <h1 class="degree-heading-2">Intermediate</h1>
                 <h4 class="degree-from">Ziauddin Examination Board</h4>
-                <p class="degree-about">After Taking long break due to Covid I completed my Intermediate from ZUEB in 2022 i got 73% </p>
+                <p class="degree-about">I completed my Intermediate from Commerce from ZUEB in 2022 </p>
             </div>
         </div>
             <div class="second-education">
-                <h5 class="year">2017</h5>
+                <h5 class="year-3">2017</h5>
                 <span class="education-line"></span>
             <div class="degree-2">
                 <h1 class="degree-heading-3">Matric</h1>
